# quickstart

./: .gitignore  Dockerfile  Dockerfile.go-grpc  Dockerfile.go-grpc-quickstart  Makefile  buf.gen.yaml  buf.yaml  docker-compose.yml  go.mod  go.work  go.work.sum
api/openapi/: package-lock.json  package.json
api/openapi/spec/: openapi.yaml
api/proto/: buf.gen.yaml  buf.yaml
modules/go-grpc-quickstart/: main.go
openapi/: package.json
proto/: buf.gen.yaml  go.mod
proto/helloworld/v1/: helloworld.pb.go  helloworld.proto
scripts/utils/: openapi-http.sh
src/go/: Dockerfile  Makefile  go.mod  go.sum
src/go-grpc/: go.mod  go.sum
src/nodejs/: package.json
src/python/: .env  .gitignore  Makefile  pyproject.toml
src/python/app/mcp_quickstart/: __init__.py
src/python/app/mcp_quickstart/sse/: client.py  server.py
src/python/app/mcp_quickstart/stdio/: client.py  server.py
src/python/app/mcp_quickstart/websocket/: client.py
src/python/app/utils/: constants.py
src/python/apps/langgraph/: example.py
src/python/apps/mcp/: mcp_client.py  openai_client.py  transport.py
src/python/apps/mcp/socketio/: server.py
src/python/apps/mcp/sse/: client.py  server.py
src/python/apps/mcp/stdio/: client.py  server.py
src/python/apps/mcp/websocket/: client.py  server.py
src/python/apps/mcp_quickstart/: mcp_client.py  mcp_test.py  openai_client.py
src/python/apps/mcp_quickstart/socketio/: server.py
src/python/apps/mcp_quickstart/sse/: client.py  server.py
src/python/apps/mcp_quickstart/stdio/: client.py  server.py
src/python/apps/mcp_quickstart/websocket/: client.py
src/python/apps/rag/libs/domain/: value_objects.py
src/python/libs/: pyproject.toml
src/python/libs/database/mongo/: datastore.py  error.py  models.py  repository.py
src/python/utils/: constants.py  openai_util.py
(+293 files in other folders)
