[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "guodongq", email = "goldon.qian@gmail.com" }
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "openai>=1.73.0",
    "urllib3>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
