[project]
name = "python-quickstart"
version = "0.1.0"
description = "Monorepo for multiple Python projects"
authors = ["Bruce<goldon.qian@gmail.com>"]
readme = "README.md"
requires-python = ">=3.13"

[tool.uv.workspace]
members = [
    "libs"
    # "apps/rag"
]

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "UP", # pyupgrade
    "I", # isort
    "B", # bugbear
    "N", # pep8-naming
    "C4", # Comprehensions
    "Q", # Quotes
    "SIM", # Simplify
    "RUF", # Ruff
    "TID", # tidy-imports
    "ASYNC", # async
    # TODO: add "DTZ",   # DatetimeZ
    # TODO: add "ANN",   # annotations
]
lint.ignore = [
    "E501" # line lenght (annyoing)
]
force-exclude = true

[tool.uv]
dev-dependencies = ["pyright>=1.1.399", "pytest>=8.3.4", "ruff>=0.8.5"]

# dependencies = [
#     "exceptiongroup>=1.2.2",
#     "fastmcp>=2.2.5",
#     "langchain>=0.3.25",
#     "langchain-core>=0.3.62",
#     "langchain-ollama>=0.3.3",
#     "langgraph>=0.4.7",
#     "mcp>=1.6.0",
#     "openai>=1.76.0",
#     "pytest>=8.3.5",
#     "python-socketio>=5.13.0",
# ]
